--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               Message
               <span class="required-star">*</span>
             </label>
-            <textarea id="message-txt-area"></textarea>
+            <textarea id="message-txt-area" rows="10"></textarea>
           </div>
 
           <div class="form-group consent-group">
