Add custom svgs for radio & checkbox

--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
                   id="enquiry"
                   value="General Enquiry"
                 />
-                <label for="enquiry">General Enquiry</label>
+                <label for="enquiry">
+                  <img
+                    src="assets/images/icon-radio-selected.svg"
+                    class="custom-radio"
+                  />
+                  General Enquiry</label
+                >
               </div>
               <div class="radio-option">
                 <input
@@ -85,7 +91,12 @@
                   id="support"
                   value="Support Request"
                 />
-                <label for="support">Support Request</label>
+                <label for="support">
+                  <img
+                    src="assets/images/icon-radio-selected.svg"
+                    class="custom-radio"
+                  />Support Request</label
+                >
               </div>
             </div>
           </div>
@@ -101,6 +112,10 @@
           <div class="form-group consent-group">
             <input type="checkbox" id="consent-checkbox" />
             <label for="consent-checkbox">
+              <img
+                src="assets/images/icon-checkbox-check.svg"
+                class="custom-checkbox"
+              />
               I consent to being contacted by the team
               <span class="required-star">*</span>
             </label>
@@ -118,5 +133,6 @@
         Thanks for completing the form. We'll be in touch soon! -->
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
