--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
 
           <div class="form-group">
-            <button type="button" id="submit-btn">Submit</button>
+            <button type="submit" id="submit-btn">Submit</button>
           </div>
         </form>
       </div>
