Add id to consent label

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="form-group consent-group">
             <input type="checkbox" id="consent-checkbox" />
-            <label for="consent-checkbox">
+            <label for="consent-checkbox" id="consent-label">
               <img
                 src="assets/images/icon-checkbox-check.svg"
                 class="custom-checkbox"
